dark theme task list box borders were black and hence invisible. Now fixed.

--- a/src/paradox-seraph.css
+++ b/src/paradox-seraph.css
@@ -238,7 +238,7 @@ input[type="checkbox"]:before {
   margin-left: -0.1rem;
   width: 1rem;
   height: 1rem;
-  border: 1px solid black;
+  border: 1px solid var(--font-color);
   background-color: var(--background-color);
   content: " ";
   display: block;
